<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    style="?attr/materialCardViewElevatedStyle"
    app:cardCornerRadius="28dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_username"
            style="@style/DialogTitle"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextField"
            style="?attr/textInputFilledDenseStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/username_conditions"
            style="@style/DialogDescription"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                style="@style/Widget.Material3.Button.TextButton.Dialog"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/update_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:layout_marginStart="16dp"
                style="@style/Widget.Material3.Button.TextButton.Dialog"
                />
        </LinearLayout>



    </LinearLayout>
</com.google.android.material.card.MaterialCardView>