<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:paddingVertical="10dp"
    android:orientation="vertical"
    android:background="@drawable/round_6"
    android:backgroundTint="?dialogColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:gravity="center_vertical"
        android:text="@string/choose_theme"
        android:textAppearance="@style/DialogTitle"
        android:background="@drawable/round_bg_ripple"
        />

    <RadioGroup
        android:id="@+id/themeRG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/systemDefaultRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/system_default"
            android:paddingHorizontal="15dp"
            android:layout_marginHorizontal="15dp"
            android:textAppearance="@style/DialogTitle"/>
        <RadioButton
            android:id="@+id/lightRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light"
            android:paddingHorizontal="15dp"
            android:layout_marginHorizontal="15dp"
            android:textAppearance="@style/DialogTitle"/>
        <RadioButton
            android:id="@+id/darkRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark"
            android:paddingHorizontal="15dp"
            android:layout_marginHorizontal="15dp"
            android:textAppearance="@style/DialogTitle"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dialog_button_size"
            android:text="Cancel"
            android:background="@drawable/round_primary_ripple_6"
            android:fontFamily="@font/roboto_medium"
            android:textStyle="normal"
            android:textColor="?android:textColorPrimary"/>
        <Button
            android:id="@+id/ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dialog_button_size"
            android:text="Ok"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/round_primary_ripple_6"
            android:fontFamily="@font/roboto_medium"
            android:textStyle="normal"
            android:textColor="@color/primary"/>
    </LinearLayout>

</LinearLayout>